Changelog
=========

1.4 - Unreleased
----------------


1.3 - 2009-10-04
----------------

- Fixed browser.txt BBB. Plone 3.3 tests have i18n enabled, older 3.x
  versions have not. We must therefore try to find the link with and
  without i18n.
  [stefan]

1.2 - 2009-05-16
----------------

- Cleanup package metadata and add it to the egg description.
  [wichert]

- Internationalized dates in mail_password_template
  [vincentfretin]

- Removed duplicate DOCTYPE definition from mail_password_form
  [limi]

- Adjusted browser tests to no longer rely on the login portlet.
  [hannosch]

- Catch RunTimeError when changing a password fails. Fixes #5742.
  [maurits]

- Added i18n domain for the userid label in the password reset form.
  [markvl]

- Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  [elro]


1.1 - 2008-03-26
----------------

- Fixed browser tests.
  [hannosch]

- Set correct i18n:domain on subject, fixes #7217.
  [martior]

- Move trunk into the egg.
  [wichert]

- Removed i18n folder. Translations are part of the PloneTranslations
  product for some time now.
  [hannosch]


1.0
---

- Providing 'fullname' now for email notification. This does not really
  close http://dev.plone.org/plone/ticket/6680, but makes it possible to
  use the information the user provided in the mail notification (and its
  translations).
  [gogo]


1.0rc2
------

- Fixed four occurrences of the term login name which wasn't used anywhere so
  far. We only use user id and user name.
  [hannosch]


1.0rc1
------

- Updated tests to work with Zope 2.10 / Plone 3.0.
  [hannosch]

- Converted mail_password_template from a dtml page to a Page Template, as
  dtml pages cannot be translated anymore.
  [hannosch]

- If available use the email_charset property instead of default_charset to
  encode mails.
  [hannosch]

- Added the portal name to the subject in the registered_notify_template.pt,
  so it's easier to distinguish those mails for various websites. This