@@ -6,20 +6,9 @@ import doctest
 import unittest
 from Testing.ZopeTestCase import FunctionalDocFileSuite
 from Products.PloneTestCase import PloneTestCase
+from Products.CMFPlone.tests.test_mails import MockMailHostTestCase
 
 PloneTestCase.setupPloneSite()
-
-from Products.PasswordResetTool.tests.utils import MockMailHost
-
-
-class MockMailHostTestCase(PloneTestCase.FunctionalTestCase):
-
-    def afterSetUp(self):
-        self.portal._original_MailHost = self.portal.MailHost
-        self.portal.MailHost = MockMailHost('MailHost')
-
-    def beforeTearDown(self):
-        self.portal.MailHost = self.portal._original_MailHost
 
 
 def test_suite():
