@@ -4,6 +4,11 @@ Changelog
 1.4 - Unreleased
 ----------------
 
+- In the tests, use the MockMailHostTestCase from Plone, instead of
+  defining our own.  Keep the old MockMailHost in case anyone is
+  importing it for own tests.  Fixes test failure.
+  [maurits]
+
 
 1.3 - 2009-10-04
 ----------------
